feat(i18n): add @nuxtjs/i18n package
- add sample translation for: EN, ES and PT
- allow to extract and compile texts from code using gettext
- add languages flag

--- a/package.json
+++ b/package.json
@@ -13,15 +13,22 @@
     "lint": "npm run lint:js && npm run lint:style && npm run lint:prettier",
     "lint:fix": "prettier --write --list-different . && npm run lint:js -- --fix && npm run lint:style -- --fix",
     "prepare": "husky install",
-    "test": "jest"
+    "test": "jest",
+    "gettext:extract": "node gettext-extract.js",
+    "gettext:compile:en": "po2json i18n/en_US.po i18n/en_US.json -f mf",
+    "gettext:compile:es": "po2json i18n/es_ES.po i18n/es_ES.json -f mf",
+    "gettext:compile:pt": "po2json i18n/pt_BR.po i18n/pt_BR.json -f mf",
+    "gettext:compile": "concurrently npm:gettext:compile:en npm:gettext:compile:es npm:gettext:compile:pt"
   },
   "dependencies": {
     "@nuxt/content": "^1.15.1",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/i18n": "^7.2.0",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.20.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
+    "vue-property-decorator": "^9.1.2",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
@@ -39,13 +46,16 @@
     "@vue/test-utils": "^1.3.0",
     "babel-core": "6.26.3",
     "babel-jest": "^27.4.6",
+    "concurrently": "^7.0.0",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.3.0",
+    "gettext-extractor": "^3.5.3",
     "husky": "^7.0.4",
     "jest": "^27.4.7",
     "lint-staged": "^12.3.1",
+    "po2json": "^0.4.5",
     "postcss": "^8.4.5",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
