--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,13 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": ["@nuxt/types", "@nuxtjs/axios", "@nuxt/content", "@types/node"]
+    "types": [
+      "@nuxt/types",
+      "@nuxtjs/i18n",
+      "@nuxtjs/axios",
+      "@nuxt/content",
+      "@types/node"
+    ]
   },
   "exclude": ["node_modules", ".nuxt", "dist"]
 }
